# speech-transcribe

./: .gitignore  README.md  config.yaml  main_legacy.py  pyproject.toml  requirements.txt
src/live_transcriber/: cli.py  config.py
src/live_transcriber/audio/: capture.py  devices.py
src/live_transcriber/io/: transcript_logger.py  wav_writer.py
src/live_transcriber/llm/: refiner.py
src/live_transcriber/scrapper/: vp_scrapper.py
src/live_transcriber/transcription/: __init__.py  mlx_transcriber.py  transcriber.py
