[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-transcriber"
version = "0.1.0"
description = "Live system-audio transcription powered by faster-whisper"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pyyaml",
    "openai",
]

[project.scripts]
live-transcriber = "live_transcriber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
